pkg/language/model_parser.go
// Code generated from ModelParser.g4 by ANTLR 4.9.3. DO NOT EDIT.

package language // ModelParser
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

import (
	"github.com/openshift-online/ocm-api-metamodel/pkg/concepts"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'attribute'", "'class'", "'code'", "'enum'", "'error'", "'false'",
	"'in'", "'link'", "'locator'", "'method'", "'out'", "'parameter'", "'resource'",
	"'struct'", "'target'", "'true'", "'value'", "'variable'", "'@'", "'{'",
	"'}'", "'['", "']'", "'('", "')'", "'='",
}
var symbolicNames = []string{
	"", "ATTRIBUTE", "CLASS", "CODE", "ENUM", "ERROR", "FALSE", "IN", "LINK",
	"LOCATOR", "METHOD", "OUT", "PARAMETER", "RESOURCE", "STRUCT", "TARGET",
	"TRUE", "VALUE", "VARIABLE", "AT_SIGN", "LEFT_CURLY_BRACKET", "RIGHT_CURLY_BRACKET",
	"LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET", "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS",
	"EQUALS_SIGN", "INTEGER_LITERAL", "STRING_LITERAL", "IDENTIFIER", "LINE_COMMENT",
	"BLOCK_COMMENT", "WS",
}

var ruleNames = []string{
	"file", "declaration", "typeDecl", "enumDecl", "enumMemberDecl", "classDecl",
	"structDecl", "structMemberDecl", "attributeKind", "typeReference", "plainTypeReference",
	"listTypeReference", "mapTypeReference", "resourceDecl", "resourceMemberDecl",
	"methodDecl", "methodMemberDecl", "methodParameterDecl", "parameterDirection",
	"locatorDecl", "locatorMemberDecl", "locatorTargetDecl", "locatorVariableDecl",
	"resourceReference", "errorDecl", "errorMemberDecl", "errorCodeDecl", "annotation",
	"annotationParameters", "annotationParameter", "literal", "booleanLiteral",
	"integerLiteral", "stringLiteral", "identifier",
}

type ModelParser struct {
	*antlr.BaseParser
}

// NewModelParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *ModelParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewModelParser(input antlr.TokenStream) *ModelParser {
	this := new(ModelParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "ModelParser.g4"

	return this
}

// ModelParser tokens.
const (
	ModelParserEOF                  = antlr.TokenEOF
	ModelParserATTRIBUTE            = 1
	ModelParserCLASS                = 2
	ModelParserCODE                 = 3
	ModelParserENUM                 = 4
	ModelParserERROR                = 5
	ModelParserFALSE                = 6
	ModelParserIN                   = 7
	ModelParserLINK                 = 8
	ModelParserLOCATOR              = 9
	ModelParserMETHOD               = 10
	ModelParserOUT                  = 11
	ModelParserPARAMETER            = 12
	ModelParserRESOURCE             = 13
	ModelParserSTRUCT               = 14
	ModelParserTARGET               = 15
	ModelParserTRUE                 = 16
	ModelParserVALUE                = 17
	ModelParserVARIABLE             = 18
	ModelParserAT_SIGN              = 19
	ModelParserLEFT_CURLY_BRACKET   = 20
	ModelParserRIGHT_CURLY_BRACKET  = 21
	ModelParserLEFT_SQUARE_BRACKET  = 22
	ModelParserRIGHT_SQUARE_BRACKET = 23
	ModelParserLEFT_PARENTHESIS     = 24
	ModelParserRIGHT_PARENTHESIS    = 25
	ModelParserEQUALS_SIGN          = 26
	ModelParserINTEGER_LITERAL      = 27
	ModelParserSTRING_LITERAL       = 28
	ModelParserIDENTIFIER           = 29
	ModelParserLINE_COMMENT         = 30
	ModelParserBLOCK_COMMENT        = 31
	ModelParserWS                   = 32
)

// ModelParser rules.
const (
	ModelParserRULE_file                 = 0
	ModelParserRULE_declaration          = 1
	ModelParserRULE_typeDecl             = 2
	ModelParserRULE_enumDecl             = 3
	ModelParserRULE_enumMemberDecl       = 4
	ModelParserRULE_classDecl            = 5
	ModelParserRULE_structDecl           = 6
	ModelParserRULE_structMemberDecl     = 7
	ModelParserRULE_attributeKind        = 8
	ModelParserRULE_typeReference        = 9
	ModelParserRULE_plainTypeReference   = 10
	ModelParserRULE_listTypeReference    = 11
	ModelParserRULE_mapTypeReference     = 12
	ModelParserRULE_resourceDecl         = 13
	ModelParserRULE_resourceMemberDecl   = 14
	ModelParserRULE_methodDecl           = 15
	ModelParserRULE_methodMemberDecl     = 16
	ModelParserRULE_methodParameterDecl  = 17
	ModelParserRULE_parameterDirection   = 18
	ModelParserRULE_locatorDecl          = 19
	ModelParserRULE_locatorMemberDecl    = 20
	ModelParserRULE_locatorTargetDecl    = 21
	ModelParserRULE_locatorVariableDecl  = 22
	ModelParserRULE_resourceReference    = 23
	ModelParserRULE_errorDecl            = 24
	ModelParserRULE_errorMemberDecl      = 25
	ModelParserRULE_errorCodeDecl        = 26
	ModelParserRULE_annotation           = 27
	ModelParserRULE_annotationParameters = 28
	ModelParserRULE_annotationParameter  = 29
	ModelParserRULE_literal              = 30
	ModelParserRULE_booleanLiteral       = 31
	ModelParserRULE_integerLiteral       = 32
	ModelParserRULE_stringLiteral        = 33
	ModelParserRULE_identifier           = 34
)

// IFileContext is an interface to support dynamic dispatch.
type IFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFileContext differentiates from other interfaces.
	IsFileContext()
}

type FileContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFileContext() *FileContext {
	var p = new(FileContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ModelParserRULE_file
	return p
}

func (*FileContext) IsFileContext() {}

func NewFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FileContext {
	var p = new(FileContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ModelParserRULE_file

	return p
}

func (s *FileContext) GetParser() antlr.Parser { return s.parser }

func (s *FileContext) AllDeclaration() []IDeclarationContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDeclarationContext)(nil)).Elem())
	var tst = make([]IDeclarationContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDeclarationContext)
		}
	}

	return tst
}

func (s *FileContext) Declaration(i int) IDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclarationContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *FileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ModelParserListener); ok {
		listenerT.EnterFile(s)
	}
}

func (s *FileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ModelParserListener); ok {
		listenerT.ExitFile(s)
	}
}

func (p *ModelParser) File() (localctx IFileContext) {
	this := p
	_ = this

	localctx = NewFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ModelParserRULE_file)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(73)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<ModelParserCLASS)|(1<<ModelParserENUM)|(1<<ModelParserERROR)|(1<<ModelParserRESOURCE)|(1<<ModelParserSTRUCT)|(1<<ModelParserAT_SIGN))) != 0 {
		{
			p.SetState(70)
			p.Declaration()
		}

		p.SetState(75)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IDeclarationContext is an interface to support dynamic dispatch.
type IDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclarationContext differentiates from other interfaces.
	IsDeclarationContext()
}

type DeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationContext() *DeclarationContext {
	var p = new(DeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ModelParserRULE_declaration
	return p
}

func (*DeclarationContext) IsDeclarationContext() {}

func NewDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationContext {
	var p = new(DeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ModelParserRULE_declaration

	return p
}

func (s *DeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationContext) TypeDecl() ITypeDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypeDeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypeDeclContext)
}

func (s *DeclarationContext) ResourceDecl() IResourceDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IResourceDeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IResourceDeclContext)
}

func (s *DeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ModelParserListener); ok {
		listenerT.EnterDeclaration(s)
	}
}

func (s *DeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ModelParserListener); ok {
		listenerT.ExitDeclaration(s)
	}
}

func (p *ModelParser) Declaration() (localctx IDeclarationContext) {
	this := p
	_ = this

	localctx = NewDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ModelParserRULE_declaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(78)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(76)
			p.TypeDecl()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(77)
			p.ResourceDecl()
		}

	}

	return localctx
}

// ITypeDeclContext is an interface to support dynamic dispatch.
type ITypeDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetResult returns the result attribute.
	GetResult() *concepts.Type

	// SetResult sets the result attribute.
	SetResult(*concepts.Type)

	// IsTypeDeclContext differentiates from other interfaces.
	IsTypeDeclContext()
}

type TypeDeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	result *concepts.Type
}

func NewEmptyTypeDeclContext() *TypeDeclContext {
	var p = new(TypeDeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ModelParserRULE_typeDecl
	return p
}

func (*TypeDeclContext) IsTypeDeclContext() {}

func NewTypeDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeDeclContext {
	var p = new(TypeDeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ModelParserRULE_typeDecl

	return p
}

func (s *TypeDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeDeclContext) GetResult() *concepts.Type { return s.result }

func (s *TypeDeclContext) SetResult(v *concepts.Type) { s.result = v }

func (s *TypeDeclContext) EnumDecl() IEnumDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEnumDeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEnumDeclContext)
}

func (s *TypeDeclContext) ClassDecl() IClassDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClassDeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IClassDeclContext)
}

func (s *TypeDeclContext) StructDecl() IStructDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStructDeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStructDeclContext)
}

func (s *TypeDeclContext) ErrorDecl() IErrorDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IErrorDeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IErrorDeclContext)
}

func (s *TypeDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TypeDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ModelParserListener); ok {
		listenerT.EnterTypeDecl(s)
	}
}

func (s *TypeDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ModelParserListener); ok {
		listenerT.ExitTypeDecl(s)
	}
}

func (p *ModelParser) TypeDecl() (localctx ITypeDeclContext) {
	this := p
	_ = this

	localctx = NewTypeDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ModelParserRULE_typeDecl)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(84)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(80)
			p.EnumDecl()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(81)
			p.ClassDecl()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(82)
			p.StructDecl()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(83)
			p.ErrorDecl()
		}

	}

	return localctx
}

// IEnumDeclContext is an interface to support dynamic dispatch.
type IEnumDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_annotation returns the _annotation rule contexts.
	Get_annotation() IAnnotationContext

	// GetName returns the name rule contexts.
	GetName() IIdentifierContext

	// Get_enumMemberDecl returns the _enumMemberDecl rule contexts.
	Get_enumMemberDecl() IEnumMemberDeclContext

	// Set_annotation sets the _annotation rule contexts.
	Set_annotation(IAnnotationContext)

	// SetName sets the name rule contexts.
	SetName(IIdentifierContext)

	// Set_enumMemberDecl sets the _enumMemberDecl rule contexts.
	Set_enumMemberDecl(IEnumMemberDeclContext)

	// GetAnnotations returns the annotations rule context list.
	GetAnnotations() []IAnnotationContext

	// GetMembers returns the members rule context list.
	GetMembers() []IEnumMemberDeclContext

	// SetAnnotations sets the annotations rule context list.
	SetAnnotations([]IAnnotationContext)

	// SetMembers sets the members rule context list.
	SetMembers([]IEnumMemberDeclContext)

	// GetResult returns the result attribute.
	GetResult() *concepts.Type

	// SetResult sets the result attribute.
	SetResult(*concepts.Type)

	// IsEnumDeclContext differentiates from other interfaces.
	IsEnumDeclContext()
}

type EnumDeclContext struct {
	*antlr.BaseParserRuleContext
	parser          antlr.Parser
	result          *concepts.Type
	_annotation     IAnnotationContext
	annotations     []IAnnotationContext
	name            IIdentifierContext
	_enumMemberDecl IEnumMemberDeclContext
	members         []IEnumMemberDeclContext
}

func NewEmptyEnumDeclContext() *EnumDeclContext {
	var p = new(EnumDeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ModelParserRULE_enumDecl
	return p
}

func (*EnumDeclContext) IsEnumDeclContext() {}

func NewEnumDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EnumDeclContext {
	var p = new(EnumDeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ModelParserRULE_enumDecl

	return p
}

func (s *EnumDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *EnumDeclContext) Get_annotation() IAnnotationContext { return s._annotation }

func (s *EnumDeclContext) GetName() IIdentifierContext { return s.name }

func (s *EnumDeclContext) Get_enumMemberDecl() IEnumMemberDeclContext { return s._enumMemberDecl }

func (s *EnumDeclContext) Set_annotation(v IAnnotationContext) { s._annotation = v }

func (s *EnumDeclContext) SetName(v IIdentifierContext) { s.name = v }

func (s *EnumDeclContext) Set_enumMemberDecl(v IEnumMemberDeclContext) { s._enumMemberDecl = v }

func (s *EnumDeclContext) GetAnnotations() []IAnnotationContext { return s.annotations }

func (s *EnumDeclContext) GetMembers() []IEnumMemberDeclContext { return s.members }

func (s *EnumDeclContext) SetAnnotations(v []IAnnotationContext) { s.annotations = v }

func (s *EnumDeclContext) SetMembers(v []IEnumMemberDeclContext) { s.members = v }

func (s *EnumDeclContext) GetResult() *concepts.Type { return s.result }

func (s *EnumDeclContext) SetResult(v *concepts.Type) { s.result = v }

func (s *EnumDeclContext) ENUM() antlr.TerminalNode {
	return s.GetToken(ModelParserENUM, 0)
}

func (s *EnumDeclContext) LEFT_CURLY_BRACKET() antlr.TerminalNode {
	return s.GetToken(ModelParserLEFT_CURLY_BRACKET, 0)
}

func (s *EnumDeclContext) RIGHT_CURLY_BRACKET() antlr.TerminalNode {
	return s.GetToken(ModelParserRIGHT_CURLY_BRACKET, 0)
}

func (s *EnumDeclContext) Identifier() IIdentifierContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdentifierContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIdentifierContext)
}

func (s *EnumDeclContext) AllAnnotation() []IAnnotationContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAnnotationContext)(nil)).Elem())
	var tst = make([]IAnnotationContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAnnotationContext)
		}
	}

	return tst
}

func (s *EnumDeclContext) Annotation(i int) IAnnotationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAnnotationContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAnnotationContext)
}

func (s *EnumDeclContext) AllEnumMemberDecl() []IEnumMemberDeclContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IEnumMemberDeclContext)(nil)).Elem())
	var tst = make([]IEnumMemberDeclContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IEnumMemberDeclContext)
		}
	}

	return tst
}

func (s *EnumDeclContext) EnumMemberDecl(i int) IEnumMemberDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEnumMemberDeclContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IEnumMemberDeclContext)
}

func (s *EnumDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EnumDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EnumDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ModelParserListener); ok {
		listenerT.EnterEnumDecl(s)
	}
}

func (s *EnumDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ModelParserListener); ok {
		listenerT.ExitEnumDecl(s)
	}
}

func (p *ModelParser) EnumDecl() (localctx IEnumDeclContext) {
	this := p
	_ = this

	localctx = NewEnumDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ModelParserRULE_enumDecl)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(89)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == ModelParserAT_SIGN {
		{
			p.SetState(86)

			var _x = p.Annotation()

			localctx.(*EnumDeclContext)._annotation = _x
		}
		localctx.(*EnumDeclContext).annotations = append(localctx.(*EnumDeclContext).annotations, localctx.(*EnumDeclContext)._annotation)

		p.SetState(91)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(92)
		p.Match(ModelParserENUM)
	}
	{
		p.SetState(93)

		var _x = p.Identifier()

		localctx.(*EnumDeclContext).name = _x
	}
	{
		p.SetState(94)
		p.Match(ModelParserLEFT_CURLY_BRACKET)
	}
	p.SetState(98)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<ModelParserVALUE)|(1<<ModelParserAT_SIGN)|(1<<ModelParserIDENTIFIER))) != 0 {
		{
			p.SetState(95)

			var _x = p.EnumMemberDecl()

			localctx.(*EnumDeclContext)._enumMemberDecl = _x
		}
		localctx.(*EnumDeclContext).members = append(localctx.(*EnumDeclContext).members, localctx.(*EnumDeclContext)._enumMemberDecl)

		p.SetState(100)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(101)
		p.Match(ModelParserRIGHT_CURLY_BRACKET)
	}

	return localctx
}

// IEnumMemberDeclContext is an interface to support dynamic dispatch.
type IEnumMemberDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_annotation returns the _annotation rule contexts.
	Get_annotation() IAnnotationContext

	// GetName returns the name rule contexts.
	GetName() IIdentifierContext

	// Set_annotation sets the _annotation rule contexts.
	Set_annotation(IAnnotationContext)

	// SetName sets the name rule contexts.
	SetName(IIdentifierContext)

	// GetAnnotations returns the annotations rule context list.
	GetAnnotations() []IAnnotationContext

	// SetAnnotations sets the annotations rule context list.
	SetAnnotations([]IAnnotationContext)

	// GetResult returns the result attribute.
	GetResult() *concepts.EnumValue

	// SetResult sets the result attribute.
	SetResult(*concepts.EnumValue)

	// IsEnumMemberDeclContext differentiates from other interfaces.
	IsEnumMemberDeclContext()
}

type EnumMemberDeclContext struct {
	*antlr.BaseParserRuleContext
	parser      antlr.Parser
	result      *concepts.EnumValue
	_annotation IAnnotationContext
	annotations []IAnnotationContext
	name        IIdentifierContext
}

func NewEmptyEnumMemberDeclContext() *EnumMemberDeclContext {
	var p = new(EnumMemberDeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ModelParserRULE_enumMemberDecl
	return p
}

func (*EnumMemberDeclContext) IsEnumMemberDeclContext() {}

func NewEnumMemberDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EnumMemberDeclContext {
	var p = new(EnumMemberDeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ModelParserRULE_enumMemberDecl

	return p
}

func (s *EnumMemberDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *EnumMemberDeclContext) Get_annotation() IAnnotationContext { return s._annotation }

func (s *EnumMemberDeclContext) GetName() IIdentifierContext { return s.name }

func (s *EnumMemberDeclContext) Set_annotation(v IAnnotationContext) { s._annotation = v }

func (s *EnumMemberDeclContext) SetName(v IIdentifierContext) { s.name = v }

func (s *EnumMemberDeclContext) GetAnnotations() []IAnnotationContext { return s.annotations }

func (s *EnumMemberDeclContext) SetAnnotations(v []IAnnotationContext) { s.annotations = v }

func (s *EnumMemberDeclContext) GetResult() *concepts.EnumValue { return s.result }

func (s *EnumMemberDeclContext) SetResult(v *concepts.EnumValue) { s.result = v }

func (s *EnumMemberDeclContext) Identifier() IIdentifierContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdentifierContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIdentifierContext)
}

func (s *EnumMemberDeclContext) VALUE() antlr.TerminalNode {
	return s.GetToken(ModelParserVALUE, 0)
}

func (s *EnumMemberDeclContext) AllAnnotation() []IAnnotationContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAnnotationContext)(nil)).Elem())
	var tst = make([]IAnnotationContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAnnotationContext)
		}
	}

	return tst
}
